@@ -175,7 +175,7 @@ public class XuLyDonController extends TttpController<XuLyDon> {
 			}
 			String vaiTroNguoiDungHienTai = profileUtil.getCommonProfile(authorization).getAttribute("loaiVaiTro")
 					.toString();
-			Long congChucId = new Long(
+			Long congChucId = Long.valueOf(
 					profileUtil.getCommonProfile(authorization).getAttribute("congChucId").toString());
 
 			CongChuc congChuc = congChucRepo.findOne(congChucId);
@@ -214,9 +214,9 @@ public class XuLyDonController extends TttpController<XuLyDon> {
 				xuLyDonHienTai.setNextForm(transition.getForm());
 				// Thong tin xu ly don
 				String note = vaiTroNguoiDungHienTai + " " + nextStage.getTenVietTat() + " ";
-				Long coQuanQuanLyId = new Long(
+				Long coQuanQuanLyId = Long.valueOf(
 						profileUtil.getCommonProfile(authorization).getAttribute("coQuanQuanLyId").toString());				
-				Long donViId = new Long(
+				Long donViId = Long.valueOf(
 						profileUtil.getCommonProfile(authorization).getAttribute("donViId").toString());
 				
 				if (FlowStateEnum.TRINH_LANH_DAO.equals(nextState)) {
@@ -403,7 +403,7 @@ public class XuLyDonController extends TttpController<XuLyDon> {
 			String vaiTroNguoiDungHienTai = vaiTro.getLoaiVaiTro().name();
 
 			// Thong tin xu ly don
-			Long congChucId = new Long(
+			Long congChucId = Long.valueOf(
 					profileUtil.getCommonProfile(authorization).getAttribute("congChucId").toString());
 
 			State nextStage = xuLyDon.getNextState();
@@ -639,9 +639,9 @@ public class XuLyDonController extends TttpController<XuLyDon> {
 	 * 
 	 * // Thong tin xu ly don QuyTrinhXuLyDonEnum quyTrinhXuLy =
 	 * xuLyDon.getQuyTrinhXuLy(); String note = vaiTroNguoiDungHienTai + " " +
-	 * quyTrinhXuLy.getText().toLowerCase() + " "; Long congChucId = new Long(
+	 * quyTrinhXuLy.getText().toLowerCase() + " "; Long congChucId = Long.valueOf(
 	 * profileUtil.getCommonProfile(authorization).getAttribute("congChucId").
-	 * toString()); Long coQuanQuanLyId = new Long(
+	 * toString()); Long coQuanQuanLyId = Long.valueOf(
 	 * profileUtil.getCommonProfile(authorization).getAttribute("coQuanQuanLyId"
 	 * ).toString());
 	 * 
@@ -1366,6 +1366,11 @@ public class XuLyDonController extends TttpController<XuLyDon> {
 
 		Don don = donRepo.findOne(donService.predicateFindOne(xuLyDonHienTai.getDon().getId()));
 
+		//tao ma don
+		if (don.getMa() == null || don.getMa().isEmpty()) {
+			don.setMa(donService.getMaDon(donRepo, don.getId()));
+		}
+		
 		HuongXuLyXLDEnum huongXuLyXLD = xuLyDon.getHuongXuLy();
 		don.setHuongXuLyXLD(huongXuLyXLD);
 		//don.setThoiHanXuLyXLD(xuLyDon.getThoiHanXuLy());
@@ -1740,6 +1745,11 @@ public class XuLyDonController extends TttpController<XuLyDon> {
 
 		Don don = donRepo.findOne(donService.predicateFindOne(xuLyDonHienTai.getDon().getId()));
 
+		//tao ma don
+		if (don.getMa() == null || don.getMa().isEmpty()) {
+			don.setMa(donService.getMaDon(donRepo, don.getId()));
+		}
+		
 		HuongXuLyXLDEnum huongXuLyXLD = xuLyDonHienTai.getHuongXuLy();
 		don.setHuongXuLyXLD(huongXuLyXLD);
 		don.setThamQuyenGiaiQuyet(xuLyDonHienTai.getThamQuyenGiaiQuyet());
